; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/mtd/mtdsplit/extr_mtdsplit_uimage.c_uimage_verify_wndr3700.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/mtd/mtdsplit/extr_mtdsplit_uimage.c_uimage_verify_wndr3700.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uimage_header = type { i64, i64, i32 }

@IH_TYPE_FILESYSTEM = common dso_local global i64 0, align 8
@IH_TYPE_KERNEL = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@IH_OS_LINUX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32*)* @uimage_verify_wndr3700 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uimage_verify_wndr3700(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.uimage_header*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = bitcast i32* %10 to %struct.uimage_header*
  store %struct.uimage_header* %11, %struct.uimage_header** %8, align 8
  %12 = load i64, i64* @IH_TYPE_FILESYSTEM, align 8
  store i64 %12, i64* %9, align 8
  %13 = load %struct.uimage_header*, %struct.uimage_header** %8, align 8
  %14 = getelementptr inbounds %struct.uimage_header, %struct.uimage_header* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @be32_to_cpu(i32 %15)
  switch i32 %16, label %20 [
    i32 129, label %17
    i32 135, label %17
    i32 134, label %17
    i32 133, label %17
    i32 132, label %17
    i32 130, label %17
    i32 137, label %17
    i32 136, label %17
    i32 128, label %17
    i32 131, label %18
  ]

17:                                               ; preds = %3, %3, %3, %3, %3, %3, %3, %3, %3
  br label %23

18:                                               ; preds = %3
  %19 = load i64, i64* @IH_TYPE_KERNEL, align 8
  store i64 %19, i64* %9, align 8
  br label %23

20:                                               ; preds = %3
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %4, align 4
  br label %39

23:                                               ; preds = %18, %17
  %24 = load %struct.uimage_header*, %struct.uimage_header** %8, align 8
  %25 = getelementptr inbounds %struct.uimage_header, %struct.uimage_header* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @IH_OS_LINUX, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %35, label %29

29:                                               ; preds = %23
  %30 = load %struct.uimage_header*, %struct.uimage_header** %8, align 8
  %31 = getelementptr inbounds %struct.uimage_header, %struct.uimage_header* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* %9, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %29, %23
  %36 = load i32, i32* @EINVAL, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %4, align 4
  br label %39

38:                                               ; preds = %29
  store i32 0, i32* %4, align 4
  br label %39

39:                                               ; preds = %38, %35, %20
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @be32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
